--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,16 @@ local.properties
 # Android Studio
 .idea/
 *.iml
+
+# Update localization script needs node modules
+node_modules/
+
+# Os-specific files
+.DS_Store
+
+# Android Studio captures folder. This is where profiling captures are saved.
+captures/
+
+#Misc
+.externalNativeBuild
+.cxx
