Set up modification

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,12 @@ android {
     composeOptions {
         kotlinCompilerExtensionVersion compose_version
     }
+
+    testOptions.unitTests.all{
+        testLogging{
+            events 'passed', 'failed', 'skipped', 'standardOut', 'standardError'
+        }
+    }
     packagingOptions {
         resources {
             excludes += '/META-INF/{AL2.0,LGPL2.1}'
