--- a/app/build.gradle
+++ b/app/build.gradle
@@ -54,6 +54,7 @@ android {
     }
 
     testOptions.unitTests.all{
+        useJUnitPlatform()
         testLogging{
             events 'passed', 'failed', 'skipped', 'standardOut', 'standardError'
         }
@@ -73,11 +74,15 @@ dependencies {
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
     implementation 'androidx.activity:activity-compose:1.6.0'
-    testImplementation 'junit:junit:4.13.2'
 
-    // To use the androidx.test.core APIs
+    // junit 5
+    // (Required) Writing and executing Unit Tests on the JUnit Platform
+    testImplementation "org.junit.jupiter:junit-jupiter-api:5.8.2"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.8.2"
+    // (Optional) If you need "Parameterized Tests"
+    testImplementation "org.junit.jupiter:junit-jupiter-params:5.8.2"
+
     androidTestImplementation "androidx.test:core:1.4.0"
-    // Kotlin extensions for androidx.test.core
     androidTestImplementation "androidx.test:core-ktx:1.4.0"
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
