--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,8 @@ dependencies {
     implementation "androidx.compose.material:material:$compose_version"
     implementation "androidx.compose.ui:ui-tooling-preview:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.5.1'
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
+    //implementation "io.insert-koin:koin-android:$koinVersion"
     implementation 'androidx.activity:activity-compose:1.6.0'
 
     // junit 5
@@ -81,12 +83,15 @@ dependencies {
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:5.8.2"
     // (Optional) If you need "Parameterized Tests"
     testImplementation "org.junit.jupiter:junit-jupiter-params:5.8.2"
+    testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.6.1"
 
+    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+    androidTestImplementation "androidx.test.ext:junit-ktx:1.1.3"
     androidTestImplementation "androidx.test:core:1.4.0"
     androidTestImplementation "androidx.test:core-ktx:1.4.0"
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
+
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
-    androidTestImplementation "androidx.compose.ui:ui-test-junit4:$compose_version"
+
     debugImplementation "androidx.compose.ui:ui-tooling:$compose_version"
     debugImplementation "androidx.compose.ui:ui-test-manifest:$compose_version"
 }
