--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,10 @@ buildscript {
     ext {
         compose_version = '1.2.1'
     }
+    repositories {
+        google()
+        mavenCentral()
+    }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
     id 'com.android.application' version '7.2.2' apply false
