--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 buildscript {
     ext {
         compose_version = '1.2.1'
+        nav_version = '2.5.2'
     }
     repositories {
         google()
