--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,9 @@ buildscript {
     ext {
         compose_version = '1.2.1'
         nav_version = '2.5.2'
+        koin_version= "3.2.2"
+        koin_android_version= "3.2.2"
+        koin_android_compose_version= "3.2.1"
     }
     repositories {
         google()
